# automation_toy_project

./: LICENSE  README.md  hello_world.py  setup.cfg  setup.py
.github/workflows/: github-actions.yml
src/toy_package/: bin_search.py
src/toy_project.egg-info/: PKG-INFO  SOURCES.txt
tests/: test_algorithms.py
toy_package/: __init__.py
