[metadata]
name = toy_project
version = 0.0.1
description = Some helper functions
long_description = file: README.md
long_description_content_type = text/markdown
url = https://github.com/kungchinglin/automation_toy_project
author = Kung-Ching Lin
license = MIT
license_file = LICENSE
classifiers =
    Programming Language :: Python :: 3
    License :: OSI Approved :: MIT License
    Operating System :: OS Independent

[options]
package_dir =
        = src
packages = find:
python_requires = >=3.6
zip_safe = no

[options.packages.find]
where = src
